# windows-rust

./: Cargo.toml  README.md
src/: capturer.rs  main.rs  screen_enum.rs  sys.rs  window_enum.rs
