[package]
name = "windows-rust"
version = "0.1.0"
authors = ["Jozsef Vass <jozsef_vass@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
]