[package]
name = "windows-rust"
version = "0.1.0"
authors = ["Jozsef Vass <jozsef_vass@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
ari = { git = "https://github.com/discord/ari", branch = "remove-nightly-features" }

[dependencies]
ari = "0.0.5"
lazy_static = "1"
[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Foundation_Collections",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "System",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
]